# scopefn

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  run_if.rs  scope.rs
tests/: run_if.rs  scope.rs
