[package]
name = "scopefn"
version = "0.0.1"
edition = "2021"
authors = ["Neo Lyon <lzt1008@live.com>"]
categories = ["rust-patterns", "no-std"]
description = "Scope functions for Rust"
repository = "https://github.com/lzt1008/scopefn"
license = "MIT"
readme = "README.md"
keywords = ["scope", "functional", "scope-functions", "pipe"]

[features]
run_if = ["either"]

[dependencies]
either = { version = "1.0", optional = true }
